--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,11 @@ body {
 .container {
   display: grid;
   grid-template-columns: 1.7fr 1fr;
+  height: 100vh;
 }
 
 .hero-img {
-  width: 100%;
-  height: auto;
+  height: 100vh;
 }
 
 .text-container {
